# atv-xbmc-launcher

./: BackRowCompilerShutup.h  BuildInstructions.md  CMakeLists.txt  DebugController.m  DebuggingHints.md  Description.txt  Info.plist  Installation.md  Makefile  Overview.md  ProjectHome.md  QuProgressBarControl.m  README.txt  Settings.md  TestingRepository.md  Uninstall.md  UniversalMode.md  UtilityScripts.md  XBMCAppliance.h  XBMCAppliance.m  XBMCAppliance.md  XBMCController.h  XBMCController.m  XBMCDownloadController.m  XBMCHelper  XBMCHelper.c  XBMCLauncher.plist  XBMCPreferencesController.h  XBMCPreferencesController.m  XBMCProgressBarControl.h  XBMCUpdateBlockingController.m  XBMCUpdateController.h  XBMCUpdateController.m  XBMCUpdater.md  XBMCUserDefaults.m  compareMD5.sh  roadmap.txt  update_urls.plist  xbmcclientwrapper.h  xbmcclientwrapper.mm  (+1 more)
AppleRemote/: AppleRemote.cpp  Makefile  iremoted.c
BoxeeLauncher/: BackRowCompilerShutup.h  BoxeeAppliance.h  BoxeeAppliance.m  BoxeeClient.h  BoxeeClientwrapper.h  BoxeeClientwrapper.mm  BoxeeController.h  BoxeeController.m  BoxeeDebugHelpers.h  BoxeeDebugHelpers.m  BoxeeHelper.c  BoxeeLauncher_Prefix.pch  BoxeePreferencesController.h  BoxeePreferencesController.m  BoxeeUpdateBlockingController.h  BoxeeUpdateBlockingController.m  BoxeeUpdateController.h  BoxeeUpdateController.m  BoxeeUserDefaults.h  BoxeeUserDefaults.m  DebugController.h  DebugController.m  Info.plist  Makefile  QuDownloadController.m  killHelper.sh
BoxeeLauncher/BoxeeLauncher.xcodeproj/: davilla.mode1  davilla.pbxuser  project.pbxproj
BoxeeLauncher/tools/: install.sh
English.lproj/: InfoPlist.strings
Launcher/: Info.plist  compareMD5.sh  setAutoUpdate.sh  setMultiFinderMode.sh
Launcher/English.lproj/: InfoPlist.strings
Launcher/src/: ATV30Compatibility.h  ATV30Compatibility.m  AppControllerProtocol.h  GenericPluginModeController.h  GenericPluginModeController.m  XBMCAppliance.h  XBMCAppliance.m  XBMCMFController.h  XBMCMFController.m  XBMCMFModeController.h  XBMCMFModeController.m  XBMCPluginModeController.h  XBMCPluginModeController.m  XBMCPreferencesController.h  XBMCPreferencesController.m  XBMCPreviewController.h  XBMCPreviewController.m  XBMCPureController.h  XBMCPureController.m  XBMCUserDefaults.h  XBMCUserDefaults.m
MultiFinder/: CMakeLists.txt  Info.plist  MultiFinder.h  MultiFinder.m  Preferences.h  Preferences.m  main.mm  multifinder.mm  multifinder_main.mm
SettingsHelper/: CMakeLists.txt  settingshelper_main.mm
additional-plists/: FireFoxUpdate_URLS.plist  Flash10.0FinalUpdate_URLS.plist  Flash10.1Beta2update_URLS.plist  Flash10.1Beta3update_URLS.plist  Flash_URL.plist
additional-scripts/: FirefoxInstaller.sh  Flash10.1Beta3.sh  FlashInstaller.sh
atv-xbmc-tools.xcodeproj/: project.pbxproj
common/: atvxbmccommon.h  atvxbmccommon.m  osdetection.h  osdetection.m  xbmcclientwrapper.h  xbmcclientwrapper.mm
data/: update_urls.plist  update_urls_testing.plist
data/scripts/: beta1_update.sh
scripts/: Keymap-update.sh  alpha-0.9.10.5534_update.sh  alpha-0.9.11.5591_update.sh  alpha-0.9.11.5774_update.sh  alpha-0.9.12.6566_update.sh  alpha-0.9.13.6684_update.sh  alpha-0.9.14.6795_update.sh  alpha-0.9.14.6992_update.sh  alpha-0.9.3033_update.sh  alpha-0.9.3383_update.sh  alpha-0.9.3940_update.sh  alpha-0.9.3964_update.sh  alpha-0.9.4166_update.sh  alpha-0.9.4277_update.sh  alpha-0.9.5.4497_update.sh  alpha-0.9.6.4578_update.sh  alpha-0.9.7.4825_update.sh  alpha-0.9.9.5324_update.sh  boxee-0.9.14_update.sh  boxee.sh  boxee_clear_userdata.sh  launcher-update-0.1.sh  launcher-update-0.2.sh  launcher-update-0.3.sh  launcher-update-0.4.sh  launcher-update-0.5.sh  launcher-update-0.9.sh  launcher-update-2.1.sh  launcher-update-2.3.sh  launcher-update-3.0.sh  launcher-update-3.2.sh  multifinder-update-0.3.sh  multifinder_downgrade.sh  simplestartup.sh  test_update.sh  xbmc-8.10.b1_update.sh  xbmc-8.10.b2_update.sh  xbmc-8.10.bf1_update.sh  xbmc-8.10_update.sh  xbmc-9.04.alpha1_update.sh  (+2 more)
src/: XBMCAppliance.m  XBMCController.m  XBMCPreferencesController.h  XBMCPreferencesController.m  XBMCUserDefaults.m
src/helpers/: DebugController.h  XBMCDebugHelpers.m  osdetection.h  (+1 more)
tools/: install.sh
xbmc_remote/: Makefile  xbmc_remote  xbmc_remote.cpp
xbmchelper/: CMakeLists.txt  XBMCHelper.h  XBMCHelper.m  main.mm  xbmcclientwrapper.mm  xbmchelper_main.mm
xbmchelper/remotecontrolwrapper/: AppleRemote.h  AppleRemote.m  HIDRemoteControlDevice.h  HIDRemoteControlDevice.m  MultiClickRemoteBehavior.m  RemoteControl.h
xbmclauncher/: CMakeLists.txt  DebugController.h  DebugController.m  Info.plist  Makefile  QuDownloadController.h  QuDownloadController.m  QuProgressBarControl.h  QuProgressBarControl.m  README.txt  XBMCAppliance.h  XBMCAppliance.m  XBMCController.h  XBMCController.m  XBMCDebugHelpers.h  XBMCDebugHelpers.m  XBMCDownloadController.h  XBMCDownloadController.m  XBMCHelper  XBMCPreferencesController.h  XBMCPreferencesController.m  XBMCProgressBarControl.m  XBMCUpdateBlockingController.h  XBMCUpdateBlockingController.m  XBMCUpdateController.h  XBMCUpdateController.m  XBMCUserDefaults.h  XBMCUserDefaults.m  killxbmchelper.sh  xbmcclientwrapper.h  xbmcclientwrapper.mm
xbmclauncher-sdd/: XBMCAppliance.h  XBMCController.h  XBMCController.m  XBMCDebugHelpers.h  XBMCUpdateController.h  XBMCUpdateController.m  killxbmchelper.sh  xbmcclientwrapper.mm
xbmclauncher.xcodeproj/: project.pbxproj
xbmclauncher/English.lproj/: InfoPlist.strings
xbmclauncher/src/: XBMCAppliance.h  XBMCAppliance.m  XBMCController.h  XBMCController.m  XBMCPreferencesController.h  XBMCPreferencesController.m  XBMCUserDefaults.h
xbmclauncher/src/helpers/: DebugController.h
xbmclauncher/src/remote/: xbmcclientwrapper.h  xbmcclientwrapper.mm
xbmclauncher/src/updater/: XBMCDownloadController.h  XBMCDownloadController.m  XBMCSimpleDownloader.m  XBMCUpdateBlockingController.m  XBMCUpdateController.h  XBMCUpdateController.m
xbmclauncher/tools/: install.sh  xcodeversion
xbmclauncher/xbmclauncher.xcodeproj/: diederich.mode1v3  diederich.pbxuser  project.pbxproj
(+12 files in other folders)
