PROJECT(SettingsHelper)

SET(SETTINGS_HELPER_SRCS 
	settingshelper_main.mm
	)

FIND_LIBRARY(FOUNDATION_LIBRARY Foundation)
IF(NOT FOUNDATION_LIBRARY)
 MESSAGE(FATAL_ERROR "Ouch Foundation not found. Bailing out...")
ENDIF(NOT FOUNDATION_LIBRARY)
FIND_LIBRARY(APPLETV_LIBRARY AppleTV ${CMAKE_OSX_SYSROOT}/System/Library/PrivateFrameworks ../)
IF(NOT APPLETV_LIBRARY)
 MESSAGE(FATAL_ERROR "Ouch AppleTV not found. Bailing out...")
ENDIF(NOT APPLETV_LIBRARY)

add_executable(SettingsHelper ${SETTINGS_HELPER_SRCS})
TARGET_LINK_LIBRARIES(SettingsHelper ${FOUNDATION_LIBRARY} ${APPLETV_LIBRARY})
